# ufsc-master-thesis-mri-uda

./: .gitignore  Makefile  README.md  generate_results_source_only.ipynb  main.py  pyproject.toml  requirements.txt  run_preprocess.ipynb  run_test_validador.ipynb
analytics/ADNI1-T1-AD-CN/: ADNI1-Collect.ipynb  ADNI1-Total.ipynb
analytics/ADNI2-T1-AD-CN/: ADNI2-Collect.ipynb  ADNI2-Total.ipynb
analytics/AIBL/: AIBL-Collect.ipynb  AIBL-Total.ipynb
common/: data_setup.py  engine.py  mri_toolkit.py  networks.py  utils.py
common/CustomData/: MRI_NII_2D.py  MRI_NII_3D.py  OfficeHome.py
runs/ge_auc/: ge_philips_atdoc_auc.json  ge_philips_bnm_auc.json  ge_philips_mcc_auc.json  ge_siemens_atdoc_auc.json  ge_siemens_bnm_auc.json  ge_siemens_mcc_auc.json
runs/ge_entropy/: ge_philips_atdoc_entropy.json  ge_philips_bnm_entropy.json  ge_philips_mcc_entropy.json  ge_siemens_atdoc_entropy.json  ge_siemens_bnm_entropy.json  ge_siemens_mcc_entropy.json
runs/ge_im/: ge_philips_atdoc_im.json  ge_philips_bnm_im.json  ge_philips_mcc_im.json  ge_siemens_atdoc_im.json  ge_siemens_bnm_im.json  ge_siemens_mcc_im.json
runs/ge_snd/: ge_philips_atdoc_snd.json  ge_philips_bnm_snd.json  ge_philips_mcc_snd.json  ge_siemens_atdoc_snd.json  ge_siemens_bnm_snd.json  ge_siemens_mcc_snd.json
runs/philips_auc/: philips_ge_atdoc_auc.json  (+5 more)
teste/: engine.py  engine_3d.py  engine_media.py  test-3d.ipynb  test.ipynb
tests/: All.sh  DeepCoral.yaml  ERM.yaml  Wandb.yaml  lab-function.ipynb  lab-model.ipynb  study-lab.ipynb  test_load_ADNI.ipynb  test_load_officeHome.ipynb
(+93 files in other folders)
